--- a/Transportsystem-GoogleMaps/Transportsystem-GoogleMaps/Transportsystem-GoogleMaps.csproj
+++ b/Transportsystem-GoogleMaps/Transportsystem-GoogleMaps/Transportsystem-GoogleMaps.csproj
@@ -185,6 +185,10 @@
     <Compile Include="Migrations\201704031446555_PopulateDrivers.Designer.cs">
       <DependentUpon>201704031446555_PopulateDrivers.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201704060840099_ChangingPackageCoOrdsFromStructToDoubles.cs" />
+    <Compile Include="Migrations\201704060840099_ChangingPackageCoOrdsFromStructToDoubles.Designer.cs">
+      <DependentUpon>201704060840099_ChangingPackageCoOrdsFromStructToDoubles.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\ApplicationDbContext.cs" />
     <Compile Include="Models\Delivery.cs" />
@@ -440,6 +444,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201704031446555_PopulateDrivers.resx">
       <DependentUpon>201704031446555_PopulateDrivers.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201704060840099_ChangingPackageCoOrdsFromStructToDoubles.resx">
+      <DependentUpon>201704060840099_ChangingPackageCoOrdsFromStructToDoubles.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
