--- a/Transportsystem-GoogleMaps/Transportsystem-GoogleMaps/Transportsystem-GoogleMaps.csproj
+++ b/Transportsystem-GoogleMaps/Transportsystem-GoogleMaps/Transportsystem-GoogleMaps.csproj
@@ -426,6 +426,7 @@
     <Content Include="Views\Package\PackageForm.cshtml" />
     <Content Include="Views\Driver\DriverForm.cshtml" />
     <Content Include="Views\Delivery\Deliveries.cshtml" />
+    <Content Include="Views\Delivery\Display.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
