--- a/Transportsystem_GoogleMaps/Transportsystem_GoogleMaps/Transportsystem_GoogleMaps.csproj
+++ b/Transportsystem_GoogleMaps/Transportsystem_GoogleMaps/Transportsystem_GoogleMaps.csproj
@@ -296,6 +296,7 @@
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModels\DeliveryViewModel.cs" />
     <Compile Include="ViewModels\DriverFormViewModel.cs" />
+    <Compile Include="ViewModels\NewDeliveryViewModel.cs" />
     <Compile Include="ViewModels\PackageFormViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -537,6 +538,7 @@
     <Content Include="Views\Package\PackageForm.cshtml" />
     <Content Include="Views\Shared\_NavBar.cshtml" />
     <Content Include="Views\Delivery\DriverDelivery.cshtml" />
+    <Content Include="Views\Delivery\NewIndex.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
